--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JunaidKanthDashboard</title>
+  <title>MrJunaidKanthDashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
